# csvpack

./: CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  run_tests.yml
src/csvpack/: __init__.py  reader.py  writer.py
src/csvpack/common/: __init__.py  dtype.py  metadata.py  repr.py  sizes.py
src/csvpack/csvlib/: __init__.py  core.pyi  reader.py  writer.py
src/csvpack/csvlib/core/: Cargo.toml
src/csvpack/csvlib/core/src/: constants.rs  json_parser.rs  lib.rs  parser.rs  reader.rs  types.rs  writer.rs
src/csvpack/csvlib/csvcore/: Cargo.toml
src/csvpack/csvlib/csvcore/src/: lib.rs
tests/: test_csvlib.py  test_csvpack.py
