[metadata]
name = csvpack
version = 0.1.0.dev4
description = Library for read and write CSV dumps.

[options]
packages = find:
package_dir =
    = src
install_requires =
    light_compressor==0.1.1.dev1
    pandas>=2.1.0
    polars>=0.20.31

[options.packages.find]
where = src

[options.package_data]
* =
    csvlib/*.pyi
