[package]
name = "csvcore"
version = "0.1.1"
edition = "2021"

[lib]
name = "csvcore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.13", features = ["serde_impl"] }
chrono = "0.4"
memchr = "2.6"
encoding_rs = "0.8"

[build-dependencies]
pyo3-build-config = "0.28.2"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
